syntax = "proto3";

option go_package = "./;pb";


message Paragraph {
    uint64    ParagraphID       = 1;
    uint64    ParagraphOrderNum = 2;
    bool      IsTable           = 3;
    bool      IsNFT             = 4;
    bool      HasLinks          = 5;
    string    ParagraphClass    = 6;
    string    ParagraphText     = 7;
    uint64    ChapterID         = 8;
}


message Chapter {
    string ID                     = 1;
    string Name                   = 2;
    string Num                    = 3;
    string RegulationID           = 4;
    string OrderNum               = 5;
    repeated Paragraph Paragraphs = 6;
    string UpdatedAt              = 7;
}